--- a/Project_sem_3/Views/Home/HouseInsurance.cshtml
+++ b/Project_sem_3/Views/Home/HouseInsurance.cshtml
@@ -19,14 +19,11 @@
 
             <div class="content_3col">
                 <div id="ctl19_divdetail">
-
-                    <p>
-
                         <div class="block_button top_button myriad_pro_semibold">
 
                             @*<a href="https://localhost:44362/HomeInsurance/Order">CHARGE & ORDER</a>*@
 
-                            <button style="background-color:red;color:white" onclick="location.href='/HomeInsurance/Order'" type="button">
+                            <button style="background-color:crimson;color:white; border-radius: 6px;" onclick="location.href='/HomeInsurance/Order'" type="button">
 
                                 Charge & Order
                             </button>
@@ -36,7 +33,7 @@
                         <div><iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fbaohiemtructuyen.com.vn%2F&width=174&layout=button_count&action=like&size=large&share=true&height=46&appId" width="174" height="46" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe></div>
                         <h2>The insured: </h2>
 
-                    
+
                     <p>The house (apartment, townhouse / villa) and properties in the house</p>
                     <h2>Coverage:</h2>
                     <p>BIC will indemnify the insured against damages incurred by:</p>
@@ -319,7 +316,7 @@
                     </ul>
                     <div class="block_button myriad_pro_semibold">
                         @*<a href="https://localhost:44362/HomeInsurance/Order">CHARGE & ORDER</a>*@
-                        <button style="background-color:crimson;color:white" onclick="location.href='/HomeInsurance/Order'" type="button">
+                        <button style="background-color:crimson;color:white; border-radius: 6px" onclick="location.href='/HomeInsurance/Order'" type="button">
                             Charge & Order
                         </button>
                     </div>
