--- a/Project_sem_3/Views/Home/MedicalInsurance.cshtml
+++ b/Project_sem_3/Views/Home/MedicalInsurance.cshtml
@@ -31,7 +31,7 @@
                             <a href="HealthInsurance/Information">CHARGE & ORDER</a></div>*@
                         
 
-                        <button style="background-color:red;color:white" onclick="window.location.href = '/MedicalInsurance/Order'" type="button">
+                        <button style="background-color:crimson;  border-radius: 6px; color:white" onclick="window.location.href = '/MedicalInsurance/Order'" type="button">
 
                           Charge & Order
                         </button>
@@ -151,7 +151,7 @@
                         <div class="block_button myriad_pro_semibold">
 
                             @*<a href="https://localhost:44362/HealthInsurance/Information">CHARGE & ORDER</a>*@
-                            <button style="background-color:crimson;color:white" onclick="location.href='/MedicalInsurance/Order'" type="button">
+                            <button style="background-color:crimson; border-radius: 6px; color:white" onclick="location.href='/MedicalInsurance/Order'" type="button">
                                 Charge & Order
                                </button>
 
