--- a/Project_sem_3/Views/Home/MotorInsurance.cshtml
+++ b/Project_sem_3/Views/Home/MotorInsurance.cshtml
@@ -21,7 +21,7 @@
                         <div class="block_button myriad_pro_semibold">
 
                             @*<a href="/MotorInsurance/Order">CHARGE & ORDER</a>*@
-                            <button style="background-color:red;color:white" onclick="location.href='/MotorInsurance/Order'" type="button">
+                            <button style="background-color:crimson;color:white; border-radius: 6px" onclick="location.href='/MotorInsurance/Order'" type="button">
             Charge & Order
                             </button>
                         </div>
@@ -99,7 +99,7 @@
                     </ul>
                     <p>&nbsp;</p>
                     <div class="block_button myriad_pro_semibold">
-                        <button style="background-color:crimson;color:white" onclick="location.href='/MotorInsurance/Order'" type="button">
+                        <button style="background-color:crimson;color:white; border-radius: 6px" onclick="location.href='/MotorInsurance/Order'" type="button">
                             Charge & Order
                         </button>
                     </div>
