--- a/Project_sem_3/Views/Home/lifeInsurance.cshtml
+++ b/Project_sem_3/Views/Home/lifeInsurance.cshtml
@@ -21,7 +21,7 @@
 
                         <div class="block_button myriad_pro_semibold">
                             @*<a href="https://localhost:44362/LifeInsurance/Order">CHARGE & ORDER</a>*@
-                            <button style="background-color:crimson;color:white" onclick="location.href='/LifeInsurance/Order'" type="button">
+                            <button style="background-color:crimson;color:white; border-radius: 6px" onclick="location.href='/LifeInsurance/Order'" type="button">
                                 Charge & Order
                             </button>
 
@@ -112,7 +112,7 @@
                 <iframe style="margin-top:15px" width="560" height="315" src="https://www.youtube.com/embed/FxKb--dYdMI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                    <h2 style="margin-top: 2%; color: crimson;">Please contact us for a free consultation!</h2>
                 <div class="block_button myriad_pro_semibold">
                 @*<a href="https://localhost:44362/LifeInsurance/Order">CHARGE & ORDER</a>*@
-                    <button style="background-color:crimson;color:white" onclick="location.href='/LifeInsurance/Order'" type="button">
+                    <button style="background-color:crimson;color:white; border-radius: 6px" onclick="location.href='/LifeInsurance/Order'" type="button">
                     Charge & Order
                     </button>
                 </div>
