--- a/Project_sem_3/Views/Contract/Index.cshtml
+++ b/Project_sem_3/Views/Contract/Index.cshtml
@@ -247,7 +247,7 @@
         </div>
 
         <div class="box-border-pro">
-            <div class="mes-frm">You have just purchased insurance at the website http://baohiemtructuyen.com.vn of BIDV Insurance Corporation (BIC) with the following information: </div>
+            <div class="mes-frm">You have just purchased insurance at the website </div>
             <div id="ctl18_pnOrdContent">
 
                 <div class="sub-hd-frm" style=" margin-bottom: 0 ">
