--- a/Project_sem_3/Views/Home/MedicalInsurance.cshtml
+++ b/Project_sem_3/Views/Home/MedicalInsurance.cshtml
@@ -65,7 +65,7 @@
                             <p>
                                 <span style="color: #ff0000;">- The preeminent feature of the product is the separate design of Inpatient benefits so that customers have more options when there is no need to participate in outpatient insurance and reduce insurance premiums for customers.</span>
                             </p>
-                            <p>- Do not separate the cost limit of beds within the cost of inpatient treatment; The maximum benefit is up to VND 300 million / year, VND 7 million / day in the hospital</p>
+                            <p>- Do not separate the cost limit of beds within the cost of inpatient treatment; The maximum benefit is up to $300 / year, $5 / day in the hospital</p>
                             <p>- Apply payment at all hospitals and clinics nationwide; No co-payments apply for all ages</p>
                         </ul>
                         <p>Detailed regulations on <strong>waiting time</strong> đfor each type of disease group. Special note:</p>
@@ -81,10 +81,10 @@
                     <div style="width: 100%;">
                         <h2>Benefits when buying BIC Tam An Insurance</h2>
                         <ul>
-                            <li>Pay up <strong>to 1 billion $ </strong> for accident cases;</li>
-                            <li>Pay up <strong>to 2.5 million $ / 1 </strong> outpatient visit and treatment;</li>
-                            <li>Pay up <strong>to 9 million $ / day </strong> inpatient treatment;</li>
-                            <li>Pay up <strong>to  180 million $/ </strong>persurgery;</li>
+                            <li>Pay up <strong>to  $5 </strong> for accident cases;</li>
+                            <li>Pay up <strong>to  $6 / 1 </strong> outpatient visit and treatment;</li>
+                            <li>Pay up <strong>to $9 / day </strong> inpatient treatment;</li>
+                            <li>Pay up <strong>to  $18 / </strong>persurgery;</li>
                             <li>No medical examination is required prior to purchase;</li>
                             <li>Guarantee of hospital fees at major hospitals / clinics nationwide;</li>
                             <li>Compensation procedure is simple and fast.</li>
