--- a/Project_sem_3/Views/MotorInsurance/Order.cshtml
+++ b/Project_sem_3/Views/MotorInsurance/Order.cshtml
@@ -25,7 +25,7 @@
         <div class="col-lg-12 col-md-12 col-sm-12">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 ">
-                    <div class="hd-info-pro">LIST OF ORDERED CARS</div>
+                    <div class="hd-info-pro">LIST OF ORDERED MOTORCYCLE</div>
                     <div class="tab-content">
                         <div id="tab1" class="tab-pane active ">
                             <div class="col-lg-12 col-md-12 col-sm-12 d-none d-md-block">
